--- a/about.html
+++ b/about.html
@@ -1,83 +1,105 @@
 <!DOCTYPE HTML>
 <!--
-	Forty by HTML5 UP
+	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>About Me - Emmanuel Koranteng</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>About - Emmanuel Koranteng Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<!-- Header -->
-				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><span>Emmanuel Koranteng</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
+
+				<!-- Content -->
+				<section>
+					<header class="main">
+						<h1>About</h1>
 					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a class="button" href="about.html">About Me</a></li>
-						</ul>
-						<ul class="links">
-							<li><a href="launch_module.html">Launching into Computer Science</a></li>
-						</ul>
-					</nav>
+					<span class="image main"><img src="images/lorimcm-SgoX_fSZ4qM-unsplash.jpg" alt="" /></span>
 
-				<!-- Main -->
-					<div id="main" class="alt">
-
-						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>About Me</h2>
-									</header>
-									<span class="image main"><img src="images/fountain_pen.jpg" alt="" /></span>
-									<p>I am a software engineer who enjoys working with data at scale and building technology for efficient and reliable data processing and utilisation. Aside from Big Data, another area of interest is Automation Engineering, which stemmed from a desire to tinker with machines and automobiles.</p>
-									<p>I am currently based in Vancouver, Canada, where I work for a company that provides financial investors and equity researchers with the platform and products to help them make informed decisions. Outside work, I enjoy playing tennis, exploring nature, and spending time with family. Thanks for stopping by!</p>
-								</div>
-							</section>
-
-					</div>
+					<p>I am a software engineer who enjoys working with data at scale and building technology for
+						efficient and reliable data processing and utilisation. Aside from Big Data, another area of
+						interest is Automation Engineering, which stemmed from a desire to tinker with machines and
+						automobiles.</p>
+					<p>I am currently based in Vancouver, Canada, where I work for a company that provides financial
+						investors and equity researchers with the platform and products to help them make informed
+						decisions. Outside work, I enjoy playing tennis, exploring nature, and spending time with
+						family.</p>
+					<p>Thanks for stopping by!</p>
+				</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://github.com/eakoranteng" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; 2023 Emmanuel Koranteng</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<p class="copyright">&copy; 2023 Emmanuel Koranteng. All rights reserved. Images: <a
+							href="https://unsplash.com">Unsplash</a>. Theme: <a href="https://html5up.net">HTML5 UP</a>.
+					</p>
+				</footer>
 
 			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		</div>
 
-	</body>
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div class="inner">
+
+				<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li>
+							<span class="opener">Modules</span>
+							<ul>
+								<li><a href="module1.html">Launching into Computer Science</a></li>
+								<li><a href="module2.html">Object Oriented Programming</a></li>
+								<li><a href="#">Secure Software Development</a></li>
+								<li><a href="#">Network Security</a></li>
+								<li><a href="#">Information Security Management</a></li>
+								<li><a href="#">Software Engineering Project Management</a></li>
+								<li><a href="#">Research Methods and Professional Practice</a></li>
+								<li><a href="#">MSc Computing Project and Dissertation</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+
+				<!-- Section -->
+				<section>
+					<ul class="icons">
+						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					</ul>
+				</section>
+
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
