--- a/index.html
+++ b/index.html
@@ -1,153 +1,165 @@
 <!DOCTYPE HTML>
 <!--
-	Forty by HTML5 UP
+	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Emmanuel Koranteng</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Emmanuel Koranteng Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><span>Emmanuel Koranteng</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a class="button" href="index.html">Home</a></li>
-							<li><a href="about.html">About Me</a></li>
-						</ul>
-						<ul class="links">
-							<li><a href="launch_module.html">Launching into Computer Science</a></li>
-						</ul>
-					</nav>
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
 
 				<!-- Banner -->
-					<section id="banner" class="major">
-						<div class="inner">
-							<header class="major">
-								<h1>MSc Computer Science E-Portfolio</h1>
-							</header>
-							<div class="content">
-								<p>An e-portfolio based on my work carried out on the MSc Computer Science programme.</p>
-							</div>
-						</div>
-					</section>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- About summary -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>About Me</h2>
-									</header>
-									<p>Software Engineer | Student</p>
-									<ul class="actions">
-										<li><a href="about.html" class="button">Learn More</a></li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Modules -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="launch_module.html" class="link">Launching into Computer Science</a></h3>
-										<p>Introductory Module</p>
-									</header>
-								</article>
-								<!-- <article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#" class="link">Secure Software Development</a></h3>
-										<p></p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#" class="link">Object Oriented Programming</a></h3>
-										<p></p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#" class="link">Security Risk Management</a></h3>
-										<p></p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#" class="link">Software Engineering Project Management</a></h3>
-										<p></p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#" class="link">Research Methods and Professional Practice</a></h3>
-										<p></p>
-									</header>
-								</article> -->
-							</section>
-
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h1>MSc Computer Science Portfolio</h1>
+							<p>A portfolio of the work carried out in my MSc Computer Science programme</p>
+						</header>
 					</div>
+				</section>
+
+				<!-- Content -->
+				<section>
+					<header class="major">
+						<h2>Modules</h2>
+					</header>
+					<div class="posts">
+						<article>
+							<h3>Launching into Computer Science</h3>
+							<p>High-level overview of Computer Science theories and contemporary practices.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Object Oriented Programming</h3>
+							<p>Programming principles, practices and object-oriented programming paradigm.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Secure Software Development</h3>
+							<p>Concepts and application of secure software development and SDLC models.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Network Security</h3>
+							<p>Concepts of Network Security and an analysis of security threats, vulnerabilities in
+								computer networking systems.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Information Security Management</h3>
+							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Software Engineering Project Management</h3>
+							<p>Application of Project Management methodologies, tools and techniques in software
+								engineering.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Research Methods and Professional Practice</h3>
+							<p>Research methodologies and a look at the legal and ethical issues in computing
+								professions.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>MSc Computing Project and Dissertation</h3>
+							<p>Dissertation of a research project on a selected topic of interest within Computer
+								Science.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</article>
+					</div>
+				</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://github.com/eakoranteng" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; 2023 Emmanuel Koranteng</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<p class="copyright">&copy; 2023 Emmanuel Koranteng. All rights reserved. Images: <a
+							href="https://unsplash.com">Unsplash</a>. Theme: <a href="https://html5up.net">HTML5 UP</a>.
+					</p>
+				</footer>
 
 			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		</div>
 
-	</body>
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div class="inner">
+
+				<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li>
+							<span class="opener">Modules</span>
+							<ul>
+								<li><a href="module1.html">Launching into Computer Science</a></li>
+								<li><a href="module2.html">Object Oriented Programming</a></li>
+								<li><a href="#">Secure Software Development</a></li>
+								<li><a href="#">Network Security</a></li>
+								<li><a href="#">Information Security Management</a></li>
+								<li><a href="#">Software Engineering Project Management</a></li>
+								<li><a href="#">Research Methods and Professional Practice</a></li>
+								<li><a href="#">MSc Computing Project and Dissertation</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+
+				<!-- Section -->
+				<section>
+					<ul class="icons">
+						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					</ul>
+				</section>
+
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
