--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<h3>Launching into Computer Science</h3>
 							<p>High-level overview of Computer Science theories and contemporary practices.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="module1.html" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
