Add module 2 changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<h3>Object Oriented Programming</h3>
 							<p>Programming principles, practices and object-oriented programming paradigm.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="module2.html" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
