update links to modules

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 							<p>Concepts of Network Security and an analysis of security threats, vulnerabilities in
 								computer networking systems.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button disabled">More</a></li>
 							</ul>
 						</article>
 						<article>
 							<h3>Information Security Management</h3>
 							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button disabled">More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -87,7 +87,7 @@
 							<p>Research methodologies and a look at the legal and ethical issues in computing
 								professions.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button disabled">More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -95,7 +95,7 @@
 							<p>Dissertation of a research project on a selected topic of interest within Computer
 								Science.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button disabled">More</a></li>
 							</ul>
 						</article>
 					</div>
@@ -130,24 +130,20 @@
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
 								<li><a href="#">Secure Software Development</a></li>
-								<li><a href="#">Network Security</a></li>
-								<li><a href="#">Information Security Management</a></li>
 								<li><a href="#">Software Engineering Project Management</a></li>
-								<li><a href="#">Research Methods and Professional Practice</a></li>
-								<li><a href="#">MSc Computing Project and Dissertation</a></li>
 							</ul>
 						</li>
 					</ul>
 				</nav>
-
+			
 				<!-- Section -->
 				<section>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 				</section>
-
+			
 			</div>
 		</div>
 
