--- a/module2.html
+++ b/module2.html
@@ -142,24 +142,20 @@
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
 								<li><a href="#">Secure Software Development</a></li>
-								<li><a href="#">Network Security</a></li>
-								<li><a href="#">Information Security Management</a></li>
 								<li><a href="#">Software Engineering Project Management</a></li>
-								<li><a href="#">Research Methods and Professional Practice</a></li>
-								<li><a href="#">MSc Computing Project and Dissertation</a></li>
 							</ul>
 						</li>
 					</ul>
 				</nav>
-
+			
 				<!-- Section -->
 				<section>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 				</section>
-
+			
 			</div>
 		</div>
 
