update page links for secure software development module

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<h3>Secure Software Development</h3>
 							<p>Concepts and application of secure software development and SDLC models.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="module3.html" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -129,7 +129,7 @@
 							<ul>
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
-								<li><a href="#">Secure Software Development</a></li>
+								<li><a href="module3.html">Secure Software Development</a></li>
 								<li><a href="#">Software Engineering Project Management</a></li>
 							</ul>
 						</li>
