--- a/module2.html
+++ b/module2.html
@@ -141,7 +141,7 @@
 							<ul>
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
-								<li><a href="#">Secure Software Development</a></li>
+								<li><a href="module3.html">Secure Software Development</a></li>
 								<li><a href="#">Software Engineering Project Management</a></li>
 							</ul>
 						</li>
