update page links for secure software development module

--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
 							<h3>Secure Software Development</h3>
 							<p>Concepts and application of secure software development and SDLC models.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="module3.html" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Software Engineering Project Management</h3>
+							<p>Application of Project Management methodologies, tools and techniques in software
+								engineering.</p>
+							<ul class="actions">
+								<li><a href="#" class="button disabled">More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -72,14 +80,6 @@
 							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
 							<ul class="actions">
 								<li><a href="#" class="button disabled">More</a></li>
-							</ul>
-						</article>
-						<article>
-							<h3>Software Engineering Project Management</h3>
-							<p>Application of Project Management methodologies, tools and techniques in software
-								engineering.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -129,8 +129,7 @@
 							<ul>
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
-								<li><a href="#">Secure Software Development</a></li>
-								<li><a href="#">Software Engineering Project Management</a></li>
+								<li><a href="module3.html">Secure Software Development</a></li>
 							</ul>
 						</li>
 					</ul>
