update page links for software engineering project management module

--- a/module4.html
+++ b/module4.html
@@ -62,25 +62,24 @@
         <div id="sidebar">
             <div class="inner">
 
-				<!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li>
-							<span class="opener">Modules</span>
-							<ul>
-								<li><a href="module1.html">Launching into Computer Science</a></li>
-								<li><a href="module2.html">Object Oriented Programming</a></li>
-								<li><a href="#">Secure Software Development</a></li>
-								<li><a href="#">Software Engineering Project Management</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
+                <!-- Menu -->
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Menu</h2>
+                    </header>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li>
+                            <span class="opener">Modules</span>
+                            <ul>
+                                <li><a href="module1.html">Launching into Computer Science</a></li>
+                                <li><a href="module2.html">Object Oriented Programming</a></li>
+                                <li><a href="module4.html">Software Engineering Project Management</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
 
                 <!-- Section -->
                 <section>
