update page links for software engineering project management module

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 							</ul>
 						</article>
 						<article>
+							<h3>Software Engineering Project Management</h3>
+							<p>Application of Project Management methodologies, tools and techniques in software
+								engineering.</p>
+							<ul class="actions">
+								<li><a href="module4.html" class="button">More</a></li>
+							</ul>
+						</article>
+						<article>
 							<h3>Network Security</h3>
 							<p>Concepts of Network Security and an analysis of security threats, vulnerabilities in
 								computer networking systems.</p>
@@ -72,14 +80,6 @@
 							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
 							<ul class="actions">
 								<li><a href="#" class="button disabled">More</a></li>
-							</ul>
-						</article>
-						<article>
-							<h3>Software Engineering Project Management</h3>
-							<p>Application of Project Management methodologies, tools and techniques in software
-								engineering.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -130,7 +130,7 @@
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
 								<li><a href="#">Secure Software Development</a></li>
-								<li><a href="#">Software Engineering Project Management</a></li>
+								<li><a href="module4.html">Software Engineering Project Management</a></li>
 							</ul>
 						</li>
 					</ul>
