--- a/module2.html
+++ b/module2.html
@@ -142,7 +142,7 @@
 								<li><a href="module1.html">Launching into Computer Science</a></li>
 								<li><a href="module2.html">Object Oriented Programming</a></li>
 								<li><a href="#">Secure Software Development</a></li>
-								<li><a href="#">Software Engineering Project Management</a></li>
+								<li><a href="module4.html">Software Engineering Project Management</a></li>
 							</ul>
 						</li>
 					</ul>
