--- a/about.html
+++ b/about.html
@@ -75,15 +75,17 @@
 						</li>
 					</ul>
 				</nav>
-			
+
 				<!-- Section -->
 				<section>
 					<ul class="icons">
-						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
 					</ul>
 				</section>
-			
+
 			</div>
 		</div>
 
