--- a/module1.html
+++ b/module1.html
@@ -80,35 +80,50 @@
 							<tbody>
 								<tr>
 									<td>Introduction and review of the computer architecture</td>
-									<td>Identify and explain the architecture, structure and functionality of basic components of a computer system.</td>
+									<td>Identify and explain the architecture, structure and functionality of basic
+										components of a computer system.</td>
 									<td>
-										<a target="_blank" href="https://docs.google.com/presentation/d/1dexFD4bNMcv8byERkTuxXkM1ZuLM8xmpPraAN8i2r7c/edit?usp=sharing" >Presentation notes</a>
+										<a target="_blank"
+											href="https://docs.google.com/presentation/d/1dexFD4bNMcv8byERkTuxXkM1ZuLM8xmpPraAN8i2r7c/edit?usp=sharing">Presentation
+											notes</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Emerging technologies and Network</td>
 									<td>
 										<ul>
-											<li>Identify and explain the architecture, structure and functionality of basic components of a computer system.</li>
-											<li>Crtitically appraise the emerging trends in the field, such as cloud computing, big data, cyber security, and the professional and ethical requirements for dealing with such contemporary computer-based technologies.</li>
+											<li>Identify and explain the architecture, structure and functionality of
+												basic components of a computer system.</li>
+											<li>Crtitically appraise the emerging trends in the field, such as cloud
+												computing, big data, cyber security, and the professional and ethical
+												requirements for dealing with such contemporary computer-based
+												technologies.</li>
 										</ul>
 									</td>
 									<td>
-										<a target="_blank" href="https://docs.google.com/presentation/d/1-ur39XvTRdCU4LggJZHzO5PCd_-F-I-fkfJ9O40jtyE/edit?usp=sharing" >Presentation notes</a>
+										<a target="_blank"
+											href="https://docs.google.com/presentation/d/1-ur39XvTRdCU4LggJZHzO5PCd_-F-I-fkfJ9O40jtyE/edit?usp=sharing">Presentation
+											notes</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Python programming</td>
-									<td>Demonstrate a critical understanding of core data structures and programming concepts including algorithm computability.</td>
+									<td>Demonstrate a critical understanding of core data structures and programming
+										concepts including algorithm computability.</td>
 									<td>
-										<a target="_blank" href="https://docs.google.com/presentation/d/1aAzOFQ-0KMKk2IVs5BwHq4W3-fOhzsnk24c_GlQ6K24/edit?usp=sharing" >Presentation notes</a>
+										<a target="_blank"
+											href="https://docs.google.com/presentation/d/1aAzOFQ-0KMKk2IVs5BwHq4W3-fOhzsnk24c_GlQ6K24/edit?usp=sharing">Presentation
+											notes</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Advanced SQL</td>
-									<td>Critically evaluate the functionality of different types of software, i.e. operating system, utility programmes, languages and applications.</td>
+									<td>Critically evaluate the functionality of different types of software, i.e.
+										operating system, utility programmes, languages and applications.</td>
 									<td>
-										<a target="_blank" href="https://docs.google.com/presentation/d/1M6pBCyqHffaQ3wDMpf0eCk1_1rtxsWrHUkimZBPZXCc/edit?usp=sharing" >Presentation notes</a>
+										<a target="_blank"
+											href="https://docs.google.com/presentation/d/1M6pBCyqHffaQ3wDMpf0eCk1_1rtxsWrHUkimZBPZXCc/edit?usp=sharing">Presentation
+											notes</a>
 									</td>
 								</tr>
 							</tbody>
@@ -153,15 +168,17 @@
 						</li>
 					</ul>
 				</nav>
-			
+
 				<!-- Section -->
 				<section>
 					<ul class="icons">
-						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
 					</ul>
 				</section>
-			
+
 			</div>
 		</div>
 
