--- a/module2.html
+++ b/module2.html
@@ -33,10 +33,14 @@
 
 					<h2>Learning Outcomes</h2>
 					<ul>
-						<li>Appraise and critically evaluate object-oriented programming compared to other programming paradigms.</li>
-						<li>Design and implement programs that demonstrate appropriate use of object-oriented design principles.</li>
-						<li>Develop an object-oriented information system design, implementing this knowledge in applicable programming languages, such as Python and SQL.</li>
-						<li>Develop, implement and evaluate critically information system solutions to facilitate business decisions.</li>
+						<li>Appraise and critically evaluate object-oriented programming compared to other programming
+							paradigms.</li>
+						<li>Design and implement programs that demonstrate appropriate use of object-oriented design
+							principles.</li>
+						<li>Develop an object-oriented information system design, implementing this knowledge in
+							applicable programming languages, such as Python and SQL.</li>
+						<li>Develop, implement and evaluate critically information system solutions to facilitate
+							business decisions.</li>
 					</ul>
 
 					<hr class="major" />
@@ -53,42 +57,60 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>Unit 1: An Introduction to Python Programming and the OO Programming Paradigm</td>
-									<td>Develop a Python program and apply protected and unprotected variables within it.</td>
+									<td>Unit 1: An Introduction to Python Programming and the OO Programming Paradigm
+									</td>
+									<td>Develop a Python program and apply protected and unprotected variables within
+										it.</td>
 									<td>
-										<a target="_blank" href="https://gist.github.com/eakoranteng/1acd5d03f9c8377e27406447c322f17f" >Source Code</a>
+										<a target="_blank"
+											href="https://gist.github.com/eakoranteng/1acd5d03f9c8377e27406447c322f17f">Source
+											Code</a>
 									</td>
 								</tr>
 								<tr>
-									<td>Unit 2: Object Oriented Analysis - Initial Steps towards Programming in Python</td>
-									<td>Write a Python program to achieve basic employee-related functionality which includes retaining employee details and allowing an employee to book a day of annual leave. Extend the Python program you have now created to use protected and unprotected variables.</td>
+									<td>Unit 2: Object Oriented Analysis - Initial Steps towards Programming in Python
+									</td>
+									<td>Write a Python program to achieve basic employee-related functionality which
+										includes retaining employee details and allowing an employee to book a day of
+										annual leave. Extend the Python program you have now created to use protected
+										and unprotected variables.</td>
 									<td>
-										<a target="_blank" href="https://gist.github.com/eakoranteng/73772179c1c82d941bf30c7f6e26f104" >Source Code</a>
+										<a target="_blank"
+											href="https://gist.github.com/eakoranteng/73772179c1c82d941bf30c7f6e26f104">Source
+											Code</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Unit 3: UML</td>
 									<td>
 										<ol>
-											<li>Discuss which UML models are most applicable at different stages of the Software Development Life Cycle.</li>
-											<li>Making reference to <em>Unified Modeling Language Reference Manual Second Edition</em>, use the State Machine Diagram in Figure 3-7 to design a similar model for a washing machine.</li>
+											<li>Discuss which UML models are most applicable at different stages of the
+												Software Development Life Cycle.</li>
+											<li>Making reference to <em>Unified Modeling Language Reference Manual
+													Second Edition</em>, use the State Machine Diagram in Figure 3-7 to
+												design a similar model for a washing machine.</li>
 										</ol>
 									</td>
 									<td>
-										<a target="_blank" href="https://docs.google.com/document/d/1ZxbTGfJu1misH_NLB6swJAeaKFTljIvrjTEZRQBE3Bw/edit?usp=sharing" >Document</a>
+										<a target="_blank"
+											href="https://docs.google.com/document/d/1ZxbTGfJu1misH_NLB6swJAeaKFTljIvrjTEZRQBE3Bw/edit?usp=sharing">Document</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Unit 5: More on Classes</td>
-									<td>Write a Python program with polymorphism that is usable within the summative assessment for the driverless car.</td>
+									<td>Write a Python program with polymorphism that is usable within the summative
+										assessment for the driverless car.</td>
 									<td>
-										<a target="_blank" href="https://gist.github.com/eakoranteng/5a0f412108d8466b11d2ed0905640207" >Source Code</a>
+										<a target="_blank"
+											href="https://gist.github.com/eakoranteng/5a0f412108d8466b11d2ed0905640207">Source
+											Code</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Unit 7: Debugging / Error Handling, Data Structures and Data Search</td>
 									<td>
-										Create a nested dictionary of data on cars within a Car class. Extend the program to work with the dictionary by calling the following methods:
+										Create a nested dictionary of data on cars within a Car class. Extend the
+										program to work with the dictionary by calling the following methods:
 										<ul>
 											<li>items()</li>
 											<li>keys()</li>
@@ -96,17 +118,22 @@
 										</ul>
 									</td>
 									<td>
-										<a target="_blank" href="https://gist.github.com/eakoranteng/20a075f9400c46ea36d93f06c1998eef" >Source Code</a>
+										<a target="_blank"
+											href="https://gist.github.com/eakoranteng/20a075f9400c46ea36d93f06c1998eef">Source
+											Code</a>
 									</td>
 								</tr>
 								<tr>
 									<td>Unit 9: Packaging and Testing</td>
-									<td><strong>Activity 4:</strong> Extend program to test accuracy of operations using the assert statement.</td>
+									<td><strong>Activity 4:</strong> Extend program to test accuracy of operations using
+										the assert statement.</td>
 									<td>
-										<a target="_blank" href="https://gist.github.com/eakoranteng/902115778da479317c1dd0b73ccd35a5" >Source Code</a>
+										<a target="_blank"
+											href="https://gist.github.com/eakoranteng/902115778da479317c1dd0b73ccd35a5">Source
+											Code</a>
 									</td>
 								</tr>
-								
+
 							</tbody>
 						</table>
 					</div>
@@ -147,15 +174,17 @@
 						</li>
 					</ul>
 				</nav>
-			
+
 				<!-- Section -->
 				<section>
 					<ul class="icons">
-						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a target="_blank" href="#" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://github.com/eakoranteng" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
 					</ul>
 				</section>
-			
+
 			</div>
 		</div>
 
