update home page title and caption

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>MSc Computer Science Portfolio</h1>
-							<p>A portfolio of the work carried out in my MSc Computer Science programme</p>
+							<h1>Emmanuel Koranteng</h1>
+							<p>Explore my academic journey through MSc Computer Science in this e-Portfolio</p>
 						</header>
 					</div>
 				</section>
